# svdata

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  tst.sv  tst1.sv
.github/workflows/: regression.yml
src/: lib.rs  main.rs  structures.rs  sv_instance.rs  sv_misc.rs  sv_module.rs  sv_package.rs  sv_port.rs  sv_primaryliteral.rs  sv_primlit_integral.rs
testcases/: settings.txt
testcases/display/: ansi_port_inout_net_class.txt  ansi_port_inout_net_signed.txt  ansi_port_inout_net_unsigned.txt  ansi_port_input_net_class.txt  ansi_port_input_net_signed.txt  ansi_port_input_net_unsigned.txt  ansi_port_input_var_class.txt  ansi_port_input_var_signed.txt  ansi_port_input_var_unsigned.txt  ansi_port_localparam.txt  ansi_port_output_net_class.txt  ansi_port_output_net_signed.txt  ansi_port_output_net_unsigned.txt  ansi_port_output_var_class.txt  ansi_port_output_var_signed.txt  ansi_port_output_var_unsigned.txt  ansi_port_parameter_comment0.txt  ansi_port_parameter_comment1.txt  ansi_port_parameter_comment_inheritance0.txt  ansi_port_parameter_comment_inheritance1.txt  ansi_port_parameter_comment_keyword.txt  ansi_port_parameter_keyword.txt  ansi_port_parameter_nokeyword.txt  ieee1800_2017_mh0.txt  ieee1800_2017_mh1.txt  ieee1800_2017_mh10.txt  ieee1800_2017_mh11.txt  ieee1800_2017_mh12.txt  ieee1800_2017_mh13.txt  ieee1800_2017_mh14.txt  ieee1800_2017_mh15.txt  ieee1800_2017_mh16.txt  ieee1800_2017_mh17.txt  ieee1800_2017_mh18.txt  ieee1800_2017_mh19.txt  ieee1800_2017_mh2.txt  ieee1800_2017_mh20.txt  ieee1800_2017_mh3.txt  ieee1800_2017_mh4.txt  (+12 more)
(+1297 files in other folders)
