[package]
name = "svdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
enquote = "1"
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.24"
sv-parser = "0.11.3"
verilog-filelist-parser = "0.1.2"

[build-dependencies]
walkdir = "2"
